# hide-my-list

./: .env.example  .env.template  .gitignore  .yamllint  AGENTS.md  CLAUDE.md  Cargo.toml  DEV-AGENTS.md  DEV-AGENTS.original.md  Dockerfile  HEARTBEAT.md  HEARTBEAT.original.md  IDENTITY.md  IDENTITY.original.md  MEMORY.md.template  README.md  SECURITY.md  SOUL.md  SOUL.original.md  TOOLS.md  USER.md.template  docker-compose.yml  openclaw.config.json  pyproject.toml
.claude/: settings.json
.codex/: config.toml  hooks.json
.devcontainer/: Dockerfile  configure-codex.sh  devcontainer.json  fix-dns-order.sh  init-host-credentials.sh  post-create.sh  refresh-credentials.sh  setup-user.sh
.githooks/: install-hooks.sh  pre-commit  pre-push
.github/: actionlint.yaml  pull_request_template.md
.github/ci/: Dockerfile  README.md  caveman-rules.md  vendored-prompts.env  versions.env
.github/scripts/: vendor-security-prompt.py
.github/workflows/: app-image.yml  check-reminders.yml  ci-image.yml  claude-code-review.yml  claude-diagnose-workflow-failure.yml  claude.yml  cleanup-stale-pr-branches.yml  codex-code-review.yml  codex-diagnose-workflow-failure.yml  codex.yml  docker-build-push.yml  model-swap.yml  nightly-evals.yml  post-merge-daemon-check.yml  pr-tests.yml  python-validation.yml  review-coverage-evaluator.yml  review-entry.yml  review-finalize.yml  review-fixer-claude-smoke.yml  review-fixer-resume-smoke.yml  review-fixer.yml  review-judge.yml  review-pipeline.yml  (+3 more)
.review-output/: fixer-output.jsonl  fixer-result.json
app/: __init__.py  main.py  models.py
design/: adhd-priorities.md  architecture-proposal.md  devops-proposal.md
docker/: Dockerfile  backup.sh  compose.yaml
docs/: agent-capabilities.md  agentic-pipeline-learnings.md  agentic-pipeline-learnings.original.md  ai-prompts.md  architecture.md  heartbeat-checks.md  index.md  notion-schema.md  openclaw-integration.md  reward-system.md  task-lifecycle.md  user-interactions.md  user-interactions.original.md  user-preferences.md  user-preferences.original.md
migrations/: 0001_initial.sql  0002_reward_manifests.sql  0003_ops_alerts.sql  0004_user_prefs.sql  0005_readonly_user.sql  0005_reward_feedback.sql  0006_reward_feedback_columns.sql  0007_reminder_scheduling_ledger.sql  0008_reminder_outbox_kind.sql  0009_deadline_task_peers.sql  0010_signal_ingress_health.sql  0011_reward_manifest_visual_descriptors.sql
scripts/: block-reminder-reasoning-leak.sh  check-doc-links.sh  check-github-status.sh  check-reminders.sh  ci-session-store.sh  cleanup-ci-sessions.sh  cleanup-stale-pr-branches.sh  create-deduped-workflow-failure-issue.sh  create-residual-gap-issue.sh  ensure-ci-image.sh  ensure-openclaw-media-staging.sh  generate-reward-image.sh  generate-weekly-recap.sh  get-latest-merge-decision-comment.sh  installed-packages.txt  issue-pr-claims.sh  lint-mermaid-rendering.sh  load-env.sh  load-github-auth.sh  log-reward-feedback.sh  migrate_state_json.py  monitor-pipeline.sh  notion-cli.sh  pull-main.sh  reminder-daemon.sh  reminder-health-check.sh  run-required-checks.sh  security-update.sh  test-ci-session-store.sh  test-issue-pr-claims.sh  user-time-context.sh  validate-gh-cli-usage.sh  validate-mermaid.sh  validate-model-refs.sh  validate-openclaw-config.sh  validate-pr-tests-workflow.sh  validate-spec-catalog.sh  validate-workflow-refs.sh  webhook-signal.sh
setup/: README.md  bootstrap.sh  migrate-openclaw-config.sh  model-tiers.json  openclaw.json.template
src/: config.rs  error.rs  lib.rs  main.rs
tests/: conversation_test.rs  health_test.rs
(+269 files in other folders)
