[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hide-my-list"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph==1.2.0",
    "langgraph-checkpoint-postgres==3.1.0",
    "langchain-anthropic==1.4.3",
    "langchain-openai==1.2.1",
    "langchain-core==1.4.0",
    "apscheduler==3.10.4",
    "psycopg[binary]==3.3.4",
    "httpx==0.28.1",
    "websockets==16.0",
    "structlog==25.5.0",
    "pydantic==2.13.4",
    "anyio==4.13.0",
    "jinja2==3.1.6",
    "openai==1.82.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-httpserver==1.1.5",
    "ruff==0.15.13",
    "mypy==2.1.0",
    "types-psycopg2==2.9.21.20260509",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N", "B", "A", "C4", "T20"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
